# dj-opus

./: LICENSE  README.md
agents/core/:  agent_base.py  __init__.py  pulse.py  reward_system.py  utils.py
agents/data/sample_datasets/: finance_data.csv  medical_data.csv  preprocessing.py
agents/models/huggingface/: config.json  inference.py
agents/models/tensorflow/: model_definition.py
contracts/rust/: Cargo.toml
contracts/rust/src/:  lib.rs  agent_registry.rs  coin_token.rs  governance.rs
contracts/solidity/: AgentRegistry.sol  CoinToken.sol  Governance.sol  Marketplace.sol  Migrations.sol
docker/: Dockerfile_backend  Dockerfile_frontend  Dockerfile_oracles  docker-compose.yaml  kubernetes.yaml
frontend/oracles/chainlink/: oracle_adapter.py
frontend/src/: index.tsx
frontend/src/components/: AgentList.tsx  App.tsx  GovernanceDashboard.tsx  Marketplace.tsx  TokenBalance.tsx
frontend/src/pages/: Agents.tsx  GovernancePage.tsx  Home.tsx  MarketplacePage.tsx
governance/proposals/: governance_rules_update.md  tokenomics_change.md  upgrade_agent_framework.md
governance/scripts/: submit_proposal.py  tally_votes.json
tests/integration/: test_agent_blockchain_integration.py
